--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,5 @@
     "require": {
         "wp-cli/php-cli-tools": "^0.11.21"
     },
-    "bin": ["bin/start.php"]
+    "bin": ["bin/tic-tac-toe.php"]
 }
