--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,13 @@
     "autoload": {
         "files": [
             "src/Controller.php",
-            "src/View.php"
+            "src/View.php",
+            "src/Model.php"
         ]
     },
     "require": {
-        "wp-cli/php-cli-tools": "^0.11.21"
+        "wp-cli/php-cli-tools": "^0.11.21",
+        "gabordemooij/redbean": "^5.6"
     },
     "bin": ["bin/tic-tac-toe.php"]
 }
